13778 “NPM packages: Update source code of the Sunburst visual visual in order to support the new packages”

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "allowJs": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES5",
@@ -9,37 +9,12 @@
   },
   "files": [
     "typings/index.d.ts",
-    ".api/v1.2.0/PowerBI-visuals.d.ts",
-    "node_modules/@powerbi-visuals-utils/imargin/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/cssconstants/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/pixelconverter/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/displayunitsystemtype/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/displayunitsystem/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/stringextensions/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/formattingservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/valuetype/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/valueformatter/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/standaloneutility/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/shapes/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/interactivityservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/colorhelper/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/point/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/rect/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/controls-touchutils/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/svgutil/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/tooltipservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/tooltipmanager/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/tooltipbuilder/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/dataviewobjects/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/color/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/legend/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/datalabelutils/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/textmeasurementservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/datalabelmanager/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/converterhelper/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/settingsparser/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/animatorcommon/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/regexpextensions/lib/index.d.ts",
+    ".api/v1.3.0/PowerBI-visuals.d.ts",
+    "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/settings.ts",
     "src/visual.ts"
