--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,21 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "alwaysStrict": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES5",
     "sourceMap": true,
-    "out": "./.tmp/build/visual.js"
+    "sourceRoot": "../../src/",
+    "out": "./.tmp/build/visual.js",
+    "typeRoots": [
+      "node_modules/@types",
+      ".api/v1.5.0"
+    ],
+    "declaration": true
   },
   "files": [
-    "typings/index.d.ts",
-    ".api/v1.3.0/PowerBI-visuals.d.ts",
+    ".api/v1.5.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
