--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/SunburstSettings.ts",
     "src/SunburstVisual.ts"
