--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "powerbi-visuals-utils-tooltiputils": "1.0.0",
     "powerbi-visuals-utils-formattingutils": "^2.1.0",
     "powerbi-visuals-utils-typeutils": "^1.1.0",
-    "powerbi-visuals-utils-colorutils": "^1.0.0"
+    "powerbi-visuals-utils-colorutils": "^1.0.0",
+    "powerbi-visuals-utils-chartutils": "^1.2.0",
+    "powerbi-visuals-utils-interactivityutils": "^1.0.0"
   },
   "devDependencies": {
     "@types/d3": "3.5.36",
