--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/SunburstSettings.ts",
     "src/SunburstVisual.ts"
