--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "pbiviz update 1.6.0",
+    "postinstall": "pbiviz update 1.7.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint \"+(src|test)/**/*.ts\"",
+    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start"
   },
@@ -23,31 +23,35 @@
   "dependencies": {
     "d3": "3.5.5",
     "lodash": "4.17.4",
-    "powerbi-visuals-utils-dataviewutils": "1.0.1",
-    "powerbi-visuals-utils-svgutils": "0.2.1",
-    "powerbi-visuals-utils-tooltiputils": "0.3.0"
+    "powerbi-visuals-utils-dataviewutils": "^1.2.0",
+    "powerbi-visuals-utils-svgutils": "^1.1.0",
+    "powerbi-visuals-utils-tooltiputils": "1.0.0",
+    "powerbi-visuals-utils-formattingutils": "^2.1.0",
+    "powerbi-visuals-utils-typeutils": "^1.1.0",
+    "powerbi-visuals-utils-colorutils": "^1.0.0",
+    "powerbi-visuals-utils-chartutils": "^1.2.0",
+    "powerbi-visuals-utils-interactivityutils": "^1.0.0"
   },
   "devDependencies": {
     "@types/d3": "3.5.36",
-    "@types/jasmine": "2.5.43",
-    "@types/jasmine-jquery": "1.5.29",
+    "@types/jasmine": "2.5.53",
+    "@types/jasmine-jquery": "1.5.31",
     "@types/jquery": "2.0.41",
     "@types/lodash": "4.14.55",
-    "coveralls": "2.12.0",
-    "jasmine": "2.5.3",
-    "jquery": "3.2.0",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "2.0.0",
+    "coveralls": "2.13.1",
+    "jasmine": "2.6.0",
+    "jquery": "3.2.1",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.6.2",
-    "powerbi-visuals-utils-testutils": "0.2.2",
-    "powerbi-visuals-utils-formattingutils": "0.2.2",
-    "tslint": "4.5.1",
-    "tslint-microsoft-contrib": "^4.0.0",
-    "typescript": "2.1.4"
+    "powerbi-visuals-tools": "1.7.0",
+    "powerbi-visuals-utils-testutils": "^1.0.0",
+    "tslint": "5.4.3",
+    "tslint-microsoft-contrib": "^5.0.0",
+    "typescript": "2.3.4"
   }
 }
