--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,15 @@
     "declaration": true
   },
   "files": [
-    ".api/v1.6.0/PowerBI-visuals.d.ts",
+    ".api/v1.7.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/SunburstSettings.ts",
     "src/SunburstVisual.ts"
