--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "pbiviz update 1.7.0",
+    "postinstall": "pbiviz update 1.11.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -30,7 +30,8 @@
     "powerbi-visuals-utils-typeutils": "^1.1.0",
     "powerbi-visuals-utils-colorutils": "^1.0.0",
     "powerbi-visuals-utils-chartutils": "^1.2.0",
-    "powerbi-visuals-utils-interactivityutils": "^1.0.0"
+    "powerbi-visuals-utils-interactivityutils": "3.1.0",
+    "powerbi-models": "1.0.3"
   },
   "devDependencies": {
     "@types/d3": "3.5.36",
@@ -48,8 +49,8 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.7.0",
-    "powerbi-visuals-utils-testutils": "^1.0.0",
+    "powerbi-visuals-tools": "1.11.2",
+    "powerbi-visuals-utils-testutils": "1.2.0",
     "tslint": "5.4.3",
     "tslint-microsoft-contrib": "^5.0.0",
     "typescript": "2.3.4"
