27173 Update Sunburst to support high contrast mode

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "pbiviz update 1.11.0",
+    "postinstall": "pbiviz update 1.13.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -28,7 +28,7 @@
     "powerbi-visuals-utils-tooltiputils": "1.0.0",
     "powerbi-visuals-utils-formattingutils": "^2.1.0",
     "powerbi-visuals-utils-typeutils": "^1.1.0",
-    "powerbi-visuals-utils-colorutils": "^1.0.0",
+    "powerbi-visuals-utils-colorutils": "^1.1.0",
     "powerbi-visuals-utils-chartutils": "^1.2.0",
     "powerbi-visuals-utils-interactivityutils": "3.1.0",
     "powerbi-models": "1.0.3"
@@ -39,18 +39,19 @@
     "@types/jasmine-jquery": "1.5.31",
     "@types/jquery": "2.0.41",
     "@types/lodash": "4.14.55",
-    "coveralls": "2.13.1",
+    "coveralls": "3.0.2",
     "jasmine": "2.6.0",
     "jquery": "3.2.1",
-    "karma": "1.7.0",
+    "karma": "2.0.4",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.1.0",
+    "karma-coverage": "1.1.2",
+    "karma-jasmine": "1.1.2",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.11.2",
+    "powerbi-visuals-tools": "1.13.1",
     "powerbi-visuals-utils-testutils": "1.2.1",
+    "puppeteer": "^1.6.0",
     "tslint": "5.4.3",
     "tslint-microsoft-contrib": "^5.0.0",
     "typescript": "2.3.4"
