--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,11 @@
     "experimentalDecorators": true,
     "target": "ES5",
     "sourceMap": true,
-    "sourceRoot": "../../src/",
     "out": "./.tmp/build/visual.js",
     "declaration": true
   },
   "files": [
-    ".api/v1.11.0/PowerBI-visuals.d.ts",
+    ".api/v1.13.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-models/dist/models-noexports.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
@@ -22,7 +21,7 @@
     "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
-    "src/SunburstSettings.ts",
-    "src/SunburstVisual.ts"
+    "src/settings.ts",
+    "src/sunburst.ts"
   ]
 }
