--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@types/webpack": "4.4.4",
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
-    "jasmine": "2.5.2",
+    "d3": "^5.7.0",
+    "jasmine": "3.2.0",
+    "jasmine-core": "^3.2.1",
     "jasmine-jquery": "2.1.1",
     "jquery": "3.2.1",
     "karma": "3.0.0",
@@ -46,28 +48,27 @@
     "karma-webpack": "3.0.0",
     "less": "^2.1.1",
     "less-loader": "^4.1.0",
-    "powerbi-visuals-api": "^2.1.0",
-    "powerbi-visuals-tools": "3.0.2",
-    "powerbi-visuals-utils-testutils": "^2.0.4",
-    "puppeteer": "^1.6.1",
-    "style-loader": "0.21.0",
-    "stylelint": "^7.12.0",
-    "ts-loader": "4.4.2",
-    "ts-node": "^7.0.0",
-    "tslint": "5.11.0",
-    "webpack": "4.14.0",
-    "tslint-microsoft-contrib": "^5.0.0",
-    "typescript": "^3.0.1",
-    "d3": "^5.7.0",
     "lodash": "4.17.4",
     "powerbi-models": "^1.0.8",
+    "powerbi-visuals-api": "^2.1.0",
+    "powerbi-visuals-tools": "3.0.2",
     "powerbi-visuals-utils-chartutils": "2.0.7",
     "powerbi-visuals-utils-colorutils": "2.0.2",
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
     "powerbi-visuals-utils-formattingutils": "4.0.2",
     "powerbi-visuals-utils-interactivityutils": "^5.0.1",
     "powerbi-visuals-utils-svgutils": "2.0.2",
+    "powerbi-visuals-utils-testutils": "^2.0.4",
     "powerbi-visuals-utils-tooltiputils": "2.0.3",
-    "powerbi-visuals-utils-typeutils": "2.0.1"
+    "powerbi-visuals-utils-typeutils": "2.0.1",
+    "puppeteer": "^1.6.1",
+    "style-loader": "0.21.0",
+    "stylelint": "^7.12.0",
+    "ts-loader": "4.4.2",
+    "ts-node": "^7.0.0",
+    "tslint": "5.11.0",
+    "tslint-microsoft-contrib": "^5.0.0",
+    "typescript": "^3.0.1",
+    "webpack": "4.14.0"
   }
 }
