--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "pbiviz": "pbiviz",
-    "start": "pbiviz start",
+    "start": "pbiviz start --target es6",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
     "lint": "npm run lint:ts && npm run lint:less",
@@ -23,7 +23,7 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-sunburst.git"
   },
   "devDependencies": {
-    "@types/d3": "^5.0.0",
+    "@types/d3": "5.5.0",
     "@types/jasmine": "^2.5.53",
     "@types/jasmine-jquery": "^1.5.31",
     "@types/jquery": "2.0.45",
@@ -32,43 +32,43 @@
     "@types/webpack": "4.4.4",
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
-    "d3": "^5.7.0",
+    "d3": "5.7.0",
     "jasmine": "3.2.0",
     "jasmine-core": "^3.2.1",
     "jasmine-jquery": "2.1.1",
     "jquery": "3.2.1",
-    "karma": "3.0.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "1.1.2",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "3.0.13",
+    "karma-typescript": "2.1.7",
     "karma-typescript-preprocessor": "0.3.1",
     "karma-webpack": "3.0.0",
-    "less": "^2.1.1",
+    "less": "3.9.0",
     "less-loader": "^4.1.0",
-    "lodash": "4.17.4",
+    "lodash-es": "4.17.11",
     "powerbi-models": "^1.0.8",
-    "powerbi-visuals-api": "^2.1.0",
-    "powerbi-visuals-tools": "3.0.2",
-    "powerbi-visuals-utils-chartutils": "2.0.7",
-    "powerbi-visuals-utils-colorutils": "2.0.2",
-    "powerbi-visuals-utils-dataviewutils": "2.0.1",
-    "powerbi-visuals-utils-formattingutils": "4.0.2",
-    "powerbi-visuals-utils-interactivityutils": "^5.0.1",
-    "powerbi-visuals-utils-svgutils": "2.0.2",
-    "powerbi-visuals-utils-testutils": "^2.0.4",
-    "powerbi-visuals-utils-tooltiputils": "2.0.3",
-    "powerbi-visuals-utils-typeutils": "2.0.1",
+    "powerbi-visuals-api": "2.3.1",
+    "powerbi-visuals-tools": "3.0.9",
+    "powerbi-visuals-utils-chartutils": "^2.2.1",
+    "powerbi-visuals-utils-colorutils": "^2.1.0",
+    "powerbi-visuals-utils-dataviewutils": "^2.1.0",
+    "powerbi-visuals-utils-formattingutils": "^4.1.1",
+    "powerbi-visuals-utils-interactivityutils": "^5.4.0",
+    "powerbi-visuals-utils-svgutils": "^2.1.0",
+    "powerbi-visuals-utils-testutils": "^2.1.4",
+    "powerbi-visuals-utils-tooltiputils": "^2.1.3",
+    "powerbi-visuals-utils-typeutils": "^2.1.0",
     "puppeteer": "^1.6.1",
     "style-loader": "0.21.0",
     "stylelint": "^7.12.0",
-    "ts-loader": "4.4.2",
+    "ts-loader": "5.3.2",
     "ts-node": "^7.0.0",
     "tslint": "5.11.0",
     "tslint-microsoft-contrib": "^5.0.0",
-    "typescript": "^3.0.1",
+    "typescript": "3.2.2",
     "webpack": "4.14.0"
   }
 }
