--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "less-loader": "^4.1.0",
     "lodash-es": "4.17.11",
     "powerbi-models": "^1.0.8",
-    "powerbi-visuals-api": "2.3.1",
+    "powerbi-visuals-api": "^2.3.1",
     "powerbi-visuals-tools": "3.0.9",
     "powerbi-visuals-utils-chartutils": "^2.2.1",
     "powerbi-visuals-utils-colorutils": "^2.1.0",
