--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-sunburst.git"
   },
   "dependencies": {
-    "d3": "3.5.5",
+    "d3": "^5.4.0",
     "lodash": "4.17.5",
-    "powerbi-visuals-utils-dataviewutils": "^1.2.0",
-    "powerbi-visuals-utils-svgutils": "^1.1.0",
-    "powerbi-visuals-utils-tooltiputils": "1.0.0",
-    "powerbi-visuals-utils-formattingutils": "^2.1.0",
-    "powerbi-visuals-utils-typeutils": "^1.1.0",
-    "powerbi-visuals-utils-colorutils": "^1.1.0",
-    "powerbi-visuals-utils-chartutils": "^1.2.0",
-    "powerbi-visuals-utils-interactivityutils": "3.1.0",
-    "powerbi-models": "1.0.3"
+    "powerbi-models": "1.0.3",
+    "powerbi-visuals-utils-chartutils": "^2.3.1",
+    "powerbi-visuals-utils-colorutils": "^2.1.0",
+    "powerbi-visuals-utils-dataviewutils": "^2.1.1",
+    "powerbi-visuals-utils-formattingutils": "^4.1.2",
+    "powerbi-visuals-utils-interactivityutils": "^5.4.2",
+    "powerbi-visuals-utils-svgutils": "^2.1.1",
+    "powerbi-visuals-utils-tooltiputils": "^2.1.3",
+    "powerbi-visuals-utils-typeutils": "^2.1.1"
   },
   "devDependencies": {
-    "@types/d3": "3.5.36",
+    "@types/d3": "^5.7.2",
     "@types/jasmine": "2.5.53",
     "@types/jasmine-jquery": "1.5.31",
     "@types/jquery": "2.0.41",
@@ -49,8 +49,9 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.13.1",
-    "powerbi-visuals-utils-testutils": "1.2.1",
+    "powerbi-visuals-api": "^2.3.2",
+    "powerbi-visuals-tools": "^2.3.0",
+    "powerbi-visuals-utils-testutils": "^2.1.7",
     "puppeteer": "^1.6.0",
     "tslint": "5.4.3",
     "tslint-microsoft-contrib": "^5.0.0",
