--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-coverage": "2.0.3",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "4.0.1",
+    "karma-junit-reporter": "^2.0.1",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "0.3.8",
     "karma-typescript": "5.2.0",
