updated tests and context menu

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -20,7 +20,7 @@
         "function-name-case": "lower",
         "function-parentheses-newline-inside": null,
         "function-parentheses-space-inside": "never",
-        "function-url-data-uris": null,
+        "function-url-scheme-disallowed-list": null,
         "function-whitelist": null,
         "function-whitespace-after": "always",
         "number-leading-zero": "always",
@@ -74,7 +74,7 @@
         "selector-id-pattern": null,
         "selector-max-compound-selectors": 4,
         "selector-max-specificity": null,
-        "selector-no-attribute": null,
+        "selector-no-selector-max-attribute": null,
         "selector-no-combinator": null,
         "selector-no-id": null,
         "selector-no-type": null,
