--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-coverage": "2.0.3",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "4.0.1",
+    "karma-junit-reporter": "^2.0.1",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "0.3.8",
     "karma-typescript": "5.2.0",
@@ -65,9 +66,10 @@
     "powerbi-visuals-utils-interactivityutils": "^5.7.0",
     "powerbi-visuals-utils-svgutils": "^2.3.0",
     "powerbi-visuals-utils-testutils": "^2.3.4",
-    "powerbi-visuals-utils-tooltiputils": "^2.5.0",
+    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
     "powerbi-visuals-utils-typeutils": "^2.3.0",
     "puppeteer": "^5.5.0",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "2.0.0",
     "stylelint": "^13.8.0",
     "ts-loader": "8.0.12",
