--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "less-loader": "^7.2.1",
     "lodash-es": "4.17.20",
     "powerbi-models": "^1.7.0",
-    "powerbi-visuals-api": "^4.2.0",
+    "powerbi-visuals-api": "~5.4.0",
     "powerbi-visuals-tools": "3.1.15",
     "powerbi-visuals-utils-chartutils": "^2.5.0",
     "powerbi-visuals-utils-colorutils": "^2.3.0",
@@ -78,6 +78,5 @@
     "tslint-microsoft-contrib": "6.2.0",
     "typescript": "4.1.3",
     "webpack": "^4.44.2"
-  },
-  "dependencies": {}
+  }
 }
