--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cert": "pbiviz --create-cert",
     "lint": "npm run lint:ts && npm run lint:less",
     "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
-    "lint:less": "stylelint -s less \"style/**/*.less\"",
+    "lint:less": "stylelint \"style/**/*.less\"",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start"
   },
@@ -56,6 +56,7 @@
     "less": "4.0.0",
     "less-loader": "^7.2.1",
     "lodash-es": "4.17.20",
+    "postcss-less": "^6.0.0",
     "powerbi-models": "^1.7.0",
     "powerbi-visuals-api": "~5.4.0",
     "powerbi-visuals-tools": "3.1.15",
@@ -71,7 +72,7 @@
     "puppeteer": "^5.5.0",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "2.0.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^14.0.0",
     "ts-loader": "8.0.12",
     "ts-node": "^9.1.1",
     "tslint": "5.20.1",
