--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start": "pbiviz start --target es6",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
-    "lint": "npm run lint:ts && npm run lint:less",
+    "lint": "npm run eslint && npm run lint:less",
     "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
     "lint:less": "stylelint \"style/**/*.less\"",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start"
   },
@@ -79,5 +80,11 @@
     "tslint-microsoft-contrib": "6.2.0",
     "typescript": "4.1.3",
     "webpack": "^4.44.2"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1"
   }
 }
