bumb powerbi-visuals-tools

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "scripts": {
     "pbiviz": "pbiviz",
-    "start": "pbiviz start --target es6",
+    "start": "pbiviz start",
     "package": "pbiviz package",
-    "cert": "pbiviz --create-cert",
+    "cert": "pbiviz --install-cert",
     "lint": "npm run lint:ts && npm run lint:less",
     "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
     "lint:less": "stylelint -s less \"style/**/*.less\"",
-    "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
+    "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start"
   },
   "license": "MIT",
@@ -58,7 +58,7 @@
     "lodash-es": "4.17.20",
     "powerbi-models": "^1.7.0",
     "powerbi-visuals-api": "~5.4.0",
-    "powerbi-visuals-tools": "3.1.15",
+    "powerbi-visuals-tools": "^5.0.1",
     "powerbi-visuals-utils-chartutils": "^2.5.0",
     "powerbi-visuals-utils-colorutils": "^2.3.0",
     "powerbi-visuals-utils-dataviewutils": "^2.4.0",
