--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,5 @@
 {
+    "customSyntax": "postcss-less",
     "ignoreFiles": [
         "./vendor/**/*"
     ],
@@ -9,7 +10,7 @@
         "color-no-hex": null,
         "color-no-invalid-hex": true,
         "font-weight-notation": null,
-        "function-blacklist": null,
+        "function-disallowed-list": null,
         "function-calc-no-unspaced-operator": true,
         "function-comma-newline-after": "always-multi-line",
         "function-comma-newline-before": "never-multi-line",
@@ -21,18 +22,18 @@
         "function-parentheses-newline-inside": null,
         "function-parentheses-space-inside": "never",
         "function-url-scheme-disallowed-list": null,
-        "function-whitelist": null,
+        "function-allowed-list": null,
         "function-whitespace-after": "always",
         "number-leading-zero": "always",
         "number-max-precision": null,
         "number-no-trailing-zeros": true,
         "string-no-newline": true,
         "string-quotes": "double",
-        "time-no-imperceptible": null,
-        "unit-blacklist": null,
+        "time-min-milliseconds": 100,
+        "declaration-property-unit-disallowed-list": null,
         "unit-case": "lower",
         "unit-no-unknown": true,
-        "unit-whitelist": null,
+        "declaration-property-unit-allowed-list": null,
         "value-no-vendor-prefix": null,
         "value-keyword-case": "lower",
         "value-list-comma-newline-after": "always-multi-line",
@@ -64,21 +65,20 @@
         "block-opening-brace-space-after": "always-single-line",
         "block-opening-brace-space-before": "always",
         "selector-attribute-brackets-space-inside": "never",
-        "selector-attribute-operator-blacklist": null,
+        "selector-attribute-operator-disallowed-list": null,
         "selector-attribute-operator-space-after": "never",
         "selector-attribute-operator-space-before": "never",
-        "selector-attribute-operator-whitelist": null,
+        "selector-attribute-operator-allowed-list": null,
         "selector-class-pattern": null,
         "selector-combinator-space-after": "always",
         "selector-combinator-space-before": "always",
         "selector-id-pattern": null,
         "selector-max-compound-selectors": 4,
         "selector-max-specificity": null,
-        "selector-no-selector-max-attribute": null,
-        "selector-no-combinator": null,
-        "selector-no-id": null,
-        "selector-no-type": null,
-        "selector-no-universal": null,
+        "selector-max-combinators": 1,
+        "selector-max-id": 0,
+        "selector-max-type": 1,
+        "selector-max-universal": 0,
         "selector-no-vendor-prefix": null,
         "selector-pseudo-class-case": "lower",
         "selector-pseudo-class-no-unknown": true,
@@ -86,7 +86,6 @@
         "selector-pseudo-element-case": "lower",
         "selector-pseudo-element-colon-notation": "double",
         "selector-pseudo-element-no-unknown": true,
-        "selector-root-no-composition": null,
         "selector-type-case": "lower",
         "selector-type-no-unknown": true,
         "selector-max-empty-lines": 0,
@@ -94,7 +93,6 @@
         "selector-list-comma-newline-before": "never-multi-line",
         "selector-list-comma-space-after": "always-single-line",
         "selector-list-comma-space-before": "never",
-        "root-no-standard-properties": null,
         "rule-empty-line-before": [
             "always",
             {
@@ -134,7 +132,7 @@
         "at-rule-semicolon-newline-after": "always",
         "comment-empty-line-before": null,
         "comment-whitespace-inside": null,
-        "comment-word-blacklist": null,
+        "comment-word-disallowed-list": null,
         "indentation": [
             4,
             {
@@ -150,9 +148,7 @@
         "no-duplicate-selectors": true,
         "no-eol-whitespace": true,
         "no-extra-semicolons": true,
-        "no-indistinguishable-colors": null,
         "no-invalid-double-slash-comments": true,
-        "no-unknown-animations": null,
-        "no-unsupported-browser-features": null
+        "no-unknown-animations": null
     }
 }
