--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "2.2.3",
+  "version": "2.4.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
@@ -11,9 +11,10 @@
     "start": "pbiviz start --target es6",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
-    "lint": "npm run lint:ts && npm run lint:less",
+    "lint": "npm run eslint && npm run lint:less",
     "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
-    "lint:less": "stylelint -s less \"style/**/*.less\"",
+    "lint:less": "stylelint \"style/**/*.less\"",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start"
   },
@@ -56,8 +57,9 @@
     "less": "4.0.0",
     "less-loader": "^7.2.1",
     "lodash-es": "4.17.20",
+    "postcss-less": "^6.0.0",
     "powerbi-models": "^1.7.0",
-    "powerbi-visuals-api": "^4.2.0",
+    "powerbi-visuals-api": "~5.4.0",
     "powerbi-visuals-tools": "3.1.15",
     "powerbi-visuals-utils-chartutils": "^2.5.0",
     "powerbi-visuals-utils-colorutils": "^2.3.0",
@@ -71,7 +73,7 @@
     "puppeteer": "^5.5.0",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "2.0.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^14.0.0",
     "ts-loader": "8.0.12",
     "ts-node": "^9.1.1",
     "tslint": "5.20.1",
@@ -79,5 +81,10 @@
     "typescript": "4.1.3",
     "webpack": "^4.44.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1"
+  }
 }
