Remove tslint to resolve conflicting dependencies

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "pbiviz start --target es6",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
-    "lint": "npm run lint:ts && npm run lint:less",
-    "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
-    "lint:less": "stylelint -s less \"style/**/*.less\"",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start"
   },
@@ -26,19 +24,23 @@
     "@types/d3-hierarchy": "^2.0.0",
     "@types/d3-selection": "^2.0.0",
     "@types/d3-shape": "^2.0.0",
-    "@types/jasmine": "^3.6.2",
+    "@types/jasmine": "^4.3.1",
     "@types/jasmine-jquery": "^1.5.33",
     "@types/jquery": "3.5.5",
     "@types/karma": "5.0.1",
     "@types/lodash": "4.14.166",
     "@types/webpack": "4.41.25",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "core-js": "^3.8.1",
     "coveralls": "3.1.0",
     "css-loader": "5.0.1",
     "d3-hierarchy": "^2.0.0",
     "d3-selection": "^2.0.0",
     "d3-shape": "^2.0.0",
-    "jasmine": "3.6.3",
+    "eslint": "^8.37.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1",
+    "jasmine": "^4.6.0",
     "jasmine-core": "^3.6.0",
     "jasmine-jquery": "2.1.1",
     "jquery": "3.5.1",
@@ -74,8 +76,6 @@
     "stylelint": "^13.8.0",
     "ts-loader": "8.0.12",
     "ts-node": "^9.1.1",
-    "tslint": "5.20.1",
-    "tslint-microsoft-contrib": "6.2.0",
     "typescript": "4.1.3",
     "webpack": "^4.44.2"
   },
