--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,8 +24,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm audit
+      continue-on-error: true
+    - run: npm outdated
+      continue-on-error: true
     - run: npm ci
-    - run: npm run lint
+    - run: npm run eslint --if-present
+    - run: npm run lint --if-present
+    - run: npm run package
     - run: npm test
       env:
         CI: true
