--- a/package.json
+++ b/package.json
@@ -59,15 +59,15 @@
     "less-loader": "^7.2.1",
     "lodash-es": "4.17.20",
     "powerbi-models": "^1.7.0",
-    "powerbi-visuals-api": "^4.2.0",
-    "powerbi-visuals-tools": "3.1.15",
+    "powerbi-visuals-api": "~4.2.0",
+    "powerbi-visuals-tools": "^4.1.0",
     "powerbi-visuals-utils-chartutils": "^2.5.0",
     "powerbi-visuals-utils-colorutils": "^2.3.0",
     "powerbi-visuals-utils-dataviewutils": "^2.4.0",
     "powerbi-visuals-utils-formattingutils": "^4.7.0",
     "powerbi-visuals-utils-interactivityutils": "^5.7.0",
     "powerbi-visuals-utils-svgutils": "^2.3.0",
-    "powerbi-visuals-utils-testutils": "^2.4.1",
+    "powerbi-visuals-utils-testutils": "^3.0.0",
     "powerbi-visuals-utils-tooltiputils": "^2.5.2",
     "powerbi-visuals-utils-typeutils": "^2.3.0",
     "puppeteer": "^5.5.0",
@@ -77,7 +77,6 @@
     "ts-loader": "8.0.12",
     "ts-node": "^9.1.1",
     "typescript": "4.1.3",
-    "webpack": "^4.44.2"
-  },
-  "dependencies": {}
+    "webpack": "^4.47.0"
+  }
 }
