--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "less": "4.0.0",
     "less-loader": "^7.2.1",
     "lodash-es": "4.17.20",
+    "playwright-chromium": "^1.43.1",
     "powerbi-models": "^1.7.0",
     "powerbi-visuals-api": "~4.2.0",
     "powerbi-visuals-tools": "^4.1.0",
@@ -70,7 +71,6 @@
     "powerbi-visuals-utils-testutils": "^3.0.0",
     "powerbi-visuals-utils-tooltiputils": "^2.5.2",
     "powerbi-visuals-utils-typeutils": "^2.3.0",
-    "puppeteer": "^5.5.0",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "2.0.0",
     "stylelint": "^13.8.0",
